GNOME Bugzilla – Bug 682754
ClutterRotateAction wrong marshaller usage
Last modified: 2012-08-27 13:09:02 UTC
The rotate action has a 'rotate' signal returning a boolean but doesn't use the appropriate marshaller.
Created attachment 222504 [details] [review] patch v1
Review of attachment 222504 [details] [review]: looks good. I wonder how did I miss that...
Pushed to master.