rotate-action: fix wrong marshaller usage

https://bugzilla.gnome.org/show_bug.cgi?id=682754